[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynlab"
version = "0.0.4"
authors = [
  { name="Peter Nolan", email="pnolan86@vt.edu" },
]
description = "A package for dynamical systems analysis"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hokiepete/dynlab"
"Bug Tracker" = "https://github.com/hokiepete/dynlab/issues"